--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,9 @@
+image: "node": 4.2.4
 
 deploy_dist:
   stage: deploy
   script:
+    - npm install
     - grunt dist
     - rsync -avz -e ssh --cvs-exclude --exclude=config.ini --exclude=httpd.conf --exclude=php.ini --checksum --delete dist/* hazdev@dev01-acquisition.cr.usgs.gov:/data/www/apps/earthquake-latest-earthquakes/.
     - rsync -avz -e ssh --cvs-exclude --exclude=config.ini --exclude=httpd.conf --exclude=php.ini --checksum --delete dist/* hazdev@dev02-acquisition.cr.usgs.gov:/data/www/apps/earthquake-latest-earthquakes/.
